--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-nextjs-tailwind-starter",
+  "name": "lissasoap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,39 +17,62 @@
     "release": "standard-version",
     "push-release": "git push --follow-tags origin main",
     "postbuild": "next-sitemap",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "cy": "cypress open",
+    "cy:headless": "cypress run"
   },
   "dependencies": {
     "clsx": "^1.1.1",
     "next": "^12.0.9",
     "react": "^17.0.2",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.7.0",
+    "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
+    "react-image-lightbox": "^5.1.4",
     "tailwind-merge": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.0",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
+    "@storybook/addon-actions": "^6.4.18",
+    "@storybook/addon-essentials": "^6.4.18",
+    "@storybook/addon-links": "^6.4.18",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.4.18",
+    "@storybook/manager-webpack5": "^6.4.18",
+    "@storybook/react": "^6.4.18",
     "@svgr/webpack": "^6.2.0",
     "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/react": "^17.0.38",
+    "@types/react-datepicker": "^4.3.4",
     "@types/tailwindcss": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.4.2",
     "babel-jest": "^27.4.6",
+    "babel-loader": "^8.2.3",
+    "cypress": "^9.4.1",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-storybook": "^0.5.6",
     "eslint-plugin-unused-imports": "^1.1.5",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
+    "inquirer-fuzzy-path": "^2.3.0",
     "jest": "^27.4.7",
     "lint-staged": "^11.2.6",
+    "local-cypress": "^1.2.3",
     "next-sitemap": "^1.9.12",
+    "plop": "^3.0.5",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.4",
@@ -66,5 +89,8 @@
     "src/**/*.{json,css,scss,md}": [
       "prettier -w"
     ]
+  },
+  "resolutions": {
+    "webpack": "^5"
   }
 }
