--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
     "cy:headless": "cypress run"
   },
   "dependencies": {
+    "@mantine/core": "^4.0.0",
+    "@mantine/hooks": "^4.0.0",
+    "@mantine/modals": "^4.0.0",
+    "@mantine/next": "^4.0.0",
+    "@mantine/notifications": "^4.0.0",
     "clsx": "^1.1.1",
     "next": "^12.0.9",
     "react": "^17.0.2",
-    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
-    "react-dropzone": "^11.7.0",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
-    "react-image-lightbox": "^5.1.4",
     "tailwind-merge": "^1.2.0"
   },
   "devDependencies": {
