ci: :wrench: spellcheck disable
Disable spellcheck in VSCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,4 +43,13 @@
   "conventionalCommits.scopes": [
     "Scope#1"
   ],
+  "cSpell.diagnosticLevel": "Hint",
+  "workbench.colorCustomizations": {
+
+    // will change the color of three dots to red
+    
+  "editorHint.foreground": "#f000",
+  },
+
+  
 }
