--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mantine/next": "^4.0.0",
     "@mantine/notifications": "^4.0.0",
     "clsx": "^1.1.1",
+    "framer-motion": "^6.2.8",
     "next": "^12.0.9",
     "next-themes": "^0.1.1",
     "react": "^17.0.2",
