--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
+    "sharp": "^0.30.3",
     "swiper": "^8.0.7",
     "tailwind-merge": "^1.2.0"
   },
