feat: :heavy_minus_sign: react testing library and cypress command extention

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "@/*": ["./src/*"],
       "~/*": ["./public/*"]
     },
+    "types": ["cypress", "@testing-library/cypress"],
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
