--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
     "@storybook/react": "^6.4.18",
     "@svgr/webpack": "^6.2.0",
     "@tailwindcss/forms": "^0.4.0",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^12.1.4",
     "@types/react": "^17.0.38",
     "@types/react-datepicker": "^4.3.4",
     "@types/tailwindcss": "^2.2.4",
