fix: :pencil2: fixed cypress and jest types conflict

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,9 @@
       "@/*": ["./src/*"],
       "~/*": ["./public/*"]
     },
-    "types": ["cypress", "@testing-library/cypress"],
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "**/*.spec.ts", "cypress/**/*"],
   "moduleResolution": ["node_modules", ".next", "node"]
 }
