--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^14.0.0-beta",
     "@types/react": "^17.0.38",
     "@types/react-datepicker": "^4.3.4",
     "@types/tailwindcss": "^2.2.4",
@@ -72,6 +73,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-storybook": "^0.5.6",
+    "eslint-plugin-testing-library": "^5.1.0",
     "eslint-plugin-unused-imports": "^1.1.5",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
