--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     },
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/Product/Product.test.js"],
   "exclude": ["node_modules", "**/*.spec.ts", "cypress/**/*"],
   "moduleResolution": ["node_modules", ".next", "node"]
 }
