feat: :recycle: refactoring code structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "src/components/elements/Product/Product.test.js"
+    "**/*.test.js"
   ],
   "exclude": ["node_modules", "**/*.spec.ts", "cypress/**/*"],
   "moduleResolution": ["node_modules", ".next", "node"]
