test: :construction: configuring testing boilderplate

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,8 @@
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.test.js"],
   "exclude": ["node_modules", "**/*.spec.ts", "cypress/**/*"],
-  "moduleResolution": ["node_modules", ".next", "node"]
+  "moduleResolution": ["node_modules", ".next", "node"],
+  "transformIgnorePatterns": [ 
+    "node_modules/?!(swiper)" 
+  ]
 }
